--- a/layouts/partials/js-init.html
+++ b/layouts/partials/js-init.html
@@ -1,2 +1,2 @@
-<script type="text/javascript" src="../static/js/jquery.js"></script>
-<script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="static/js/jquery.js"></script>
+<script type="text/javascript" src="static/js/bootstrap.min.js"></script>
